read a BIDS dataset and upload it to scitran
implement a queue system to interact with the API

--- a/partials/main.html
+++ b/partials/main.html
@@ -5,8 +5,9 @@
   <br>
   <div>
     Data format: <select class="form-control" ng-model="main.viewType" ng-change="main.updateView()">
-      <option value="series">Series</option>
+      <option value="series">Scitran</option>
       <option value="bids">BIDS</option>
+      <option value="bids-to-series">BIDS to Scitran</option>
     </select>
   </div>
   <div id="selected-directory">
