Select format screen done

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -10,6 +10,7 @@
 @import '../scss/modules/header';
 @import '../scss/modules/footer';
 @import '../scss/modules/section-upload';
+@import '../scss/modules/section-data-format';
 
 // Vendor
 @import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css';
