--- a/scss/partials/_config.scss
+++ b/scss/partials/_config.scss
@@ -13,3 +13,4 @@ $larger:            1140px;
 // Colors
 $darkblue:          #5871a2;
 $lightblue:         #e7e9ef;
+$lighterblue:       lighten(#e7e9ef, 5%);
