--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -5,3 +5,19 @@ h1 {
 	margin:0 0 20px 0;
 	color:#7285aa;
 }
+
+// Heading 2
+h2 {
+	font-size:16px;
+	font-weight:700;
+	color:darken($darkblue, 15%);
+	margin:0 0 15px 0;
+}
+
+// Paragraph
+p {
+	font-size:14px;
+	color:rgba(0, 0, 0, .7);
+	line-height:1.7em;
+	margin:0 0 20px 0;
+}
