--- a/scss/partials/_config.scss
+++ b/scss/partials/_config.scss
@@ -12,5 +12,7 @@ $larger:            1140px;
 
 // Colors
 $darkblue:          #5871a2;
+$orange:            #fb8043;
+$orangeborder:      #cf6a38;
 $lightblue:         #e7e9ef;
 $lighterblue:       lighten(#e7e9ef, 5%);
