--- a/scss/modules/_section-data-format.scss
+++ b/scss/modules/_section-data-format.scss
@@ -24,6 +24,7 @@ section.format {
 		padding:20px;
 		margin:10px;
 		text-align:left;
+		box-shadow:0px 2px 5px rgba(0, 0, 0, .05);
 	}
 
 	// Data Format
