Added upload screen

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -5,6 +5,7 @@
 @import '../scss/partials/general';
 @import '../scss/partials/buttons';
 @import '../scss/partials/typography';
+@import '../scss/partials/forms';
 
 // Modules
 @import '../scss/modules/header';
