--- a/scss/modules/_section-data-format.scss
+++ b/scss/modules/_section-data-format.scss
@@ -17,7 +17,7 @@ section.format {
 	// Card
 	.card {
 		display:inline-block;
-		width:340px;
+		width:680px;
 		background:#FFF;
 		border:1px solid darken($lightblue, 5%);
 		border-radius:$radius;
@@ -25,6 +25,7 @@ section.format {
 		margin:10px;
 		text-align:left;
 		box-shadow:0px 2px 5px rgba(0, 0, 0, .05);
+		&.half {width:340px;}
 	}
 
 	// Data Format
