--- a/scss/partials/_general.scss
+++ b/scss/partials/_general.scss
@@ -43,3 +43,10 @@ input, {
 	@include fit(small) {width:500px;}
 	@include fit(tiny) {width:300px;}
 }
+
+// Margins
+.margin-40 {
+	display:block;
+	width:100%;
+	height:40px;
+}
