Added organize page

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -6,12 +6,14 @@
 @import '../scss/partials/buttons';
 @import '../scss/partials/typography';
 @import '../scss/partials/forms';
+@import '../scss/partials/tables';
 
 // Modules
 @import '../scss/modules/header';
 @import '../scss/modules/footer';
 @import '../scss/modules/section-upload';
 @import '../scss/modules/section-data-format';
+@import '../scss/modules/section-organize';
 
 // Vendor
 @import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css';
