--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -14,6 +14,14 @@ h2 {
 	margin:0 0 15px 0;
 }
 
+// Heading 3
+h3 {
+	font-size:20px;
+	font-weight:400;
+	color:#7285aa;
+	margin:0;
+}
+
 // Paragraph
 p {
 	font-size:14px;
