--- a/scss/partials/_forms.scss
+++ b/scss/partials/_forms.scss
@@ -26,4 +26,10 @@
 		box-shadow:0px 1px 3px rgba(0, 0, 0, .06);
 		&:focus {border-color:$darkblue;}
 	}
+
+	// Select
+	select {
+		display:block;
+		width:100%;
+	}
 }
