--- a/partials/load.html
+++ b/partials/load.html
@@ -1,7 +1,7 @@
 <section class="upload">
   <div class="center">
     <h1>Let's get organized.</h1>
-    <a class="button primary large">
+    <a class="button primary large" ng-click="load.selectFolder()">
       <strong>Click here to select files</strong>
       <small>Must be DICOM or NiFTi files only</small>
     </a>
