--- a/partials/main.html
+++ b/partials/main.html
@@ -25,11 +25,11 @@
     <img src="img/flywheelLogo.svg" class="logo">
     <!-- <img src="img/scitranLogo.png" class="logo"> -->
     <div class="progress">
-      <a ng-class="{active: (main.viewType==='load')}" ng-click="main.updateView('load')"><span class="fa fa-check"></span>Upload Data</a>
-      <a ng-class="{active: (main.viewType==='format')}" ng-click="main.updateView('format')"><span class="fa fa-circle-o"></span>Select Format</a>
-      <a ng-class="{active: (main.viewType==='organize')}" ng-click="main.updateView('organize')"><span class="fa fa-circle-o"></span>Organize Data</a>
-      <a ng-class="{active: (main.viewType==='save')}" ng-click="main.updateView('save')"><span class="fa fa-circle-o"></span>Save Data</a>
-      <a ng-class="{active: (main.viewType==='upload')}" ng-click="main.updateView('upload')"><span class="fa fa-circle-o"></span>Upload Data</a>
+      <a ng-class="{active: $state.is('main.load')}" ng-click="$state.go('main.load')"><span class="fa fa-check"></span>Load Data</a>
+      <a ng-class="{active: $state.is('main.format')}" ng-click="$state.go('main.format')"><span class="fa fa-circle-o"></span>Select Format</a>
+      <a ng-class="{active: $state.is('main.organize')}" ng-click="$state.go('main.organize')"><span class="fa fa-circle-o"></span>Organize Data</a>
+      <a ng-class="{active: $state.is('main.save')}" ng-click="$state.go('main.save')"><span class="fa fa-circle-o"></span>Save Data</a>
+      <a ng-class="{active: $state.is('main.upload')}" ng-click="$state.go('main.upload')"><span class="fa fa-circle-o"></span>Upload Data</a>
     </div>
   </header>
 
