--- a/partials/format.html
+++ b/partials/format.html
@@ -17,9 +17,9 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eveniet error suscipit voluptatum, commodi.</p>
       <h2>Data Format</h2>
       <div class="data-format">
-        <span class="level-1">Project</span>
-        <span class="level-2">Subjects</span>
-        <span class="level-3">Sessions</span>
+        <span class="level-1">Project</span><br>
+        <span class="level-2">Subjects</span><br>
+        <span class="level-3">Sessions</span><br>
         <span class="level-4">Acquisitions</span>
       </div>
       <a href="" class="button primary">Select BIDS Format</a>
