Added temp progress bar to footer

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -7,6 +7,7 @@
 @import '../scss/partials/typography';
 @import '../scss/partials/forms';
 @import '../scss/partials/tables';
+@import '../scss/partials/progress-bars';
 
 // Modules
 @import '../scss/modules/header';
