--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -17,4 +17,11 @@ footer {
 	.button {
 		margin:0 5px;
 	}
+
+	// Progress Bars
+	.progress-bar {
+		float:left;
+		width:340px;
+		margin:11px 0 0 15px;
+	}
 }
