--- a/partials/main.html
+++ b/partials/main.html
@@ -1,14 +1,14 @@
 <!-- <div className="padded-more">
   <div className="start-button">
-    <button className="btn btn-positive btn-large" ng-click="main.selectFolder()">Show files in folder</button>
+	<button className="btn btn-positive btn-large" ng-click="main.selectFolder()">Show files in folder</button>
   </div>
   <br>
   <div>
-    Data format: <select class="form-control" ng-model="main.viewType" ng-change="main.updateView()">
-      <option value="series">Scitran</option>
-      <option value="bids">BIDS</option>
-      <option value="bids-to-series">BIDS to Scitran</option>
-    </select>
+	Data format: <select class="form-control" ng-model="main.viewType" ng-change="main.updateView()">
+	  <option value="series">Scitran</option>
+	  <option value="bids">BIDS</option>
+	  <option value="bids-to-series">BIDS to Scitran</option>
+	</select>
   </div>
   <div id="selected-directory">
   </div>
@@ -22,21 +22,27 @@
 <div class="full-view">
   <!-- Header -->
   <header>
-    <img src="img/flywheelLogo.svg" class="logo">
-    <!-- <img src="img/scitranLogo.png" class="logo"> -->
-    <div class="progress">
-      <a ng-class="{active: $state.is('main.load')}" ng-click="$state.go('main.load')"><span class="fa fa-check"></span>Load Data</a>
-      <a ng-class="{active: $state.is('main.format')}" ng-click="$state.go('main.format')"><span class="fa fa-circle-o"></span>Select Format</a>
-      <a ng-class="{active: $state.is('main.organize')}" ng-click="$state.go('main.organize')"><span class="fa fa-circle-o"></span>Organize Data</a>
-      <a ng-class="{active: $state.is('main.save')}" ng-click="$state.go('main.save')"><span class="fa fa-circle-o"></span>Save Data</a>
-      <a ng-class="{active: $state.is('main.upload')}" ng-click="$state.go('main.upload')"><span class="fa fa-circle-o"></span>Upload Data</a>
-    </div>
+	<img src="img/flywheelLogo.svg" class="logo">
+	<!-- <img src="img/scitranLogo.png" class="logo"> -->
+	<div class="progress">
+	  <a ng-class="{active: $state.is('main.load')}" ng-click="$state.go('main.load')"><span class="fa fa-check"></span>Load Data</a>
+	  <a ng-class="{active: $state.is('main.format')}" ng-click="$state.go('main.format')"><span class="fa fa-circle-o"></span>Select Format</a>
+	  <a ng-class="{active: $state.is('main.organize')}" ng-click="$state.go('main.organize')"><span class="fa fa-circle-o"></span>Organize Data</a>
+	  <a ng-class="{active: $state.is('main.save')}" ng-click="$state.go('main.save')"><span class="fa fa-circle-o"></span>Save Data</a>
+	  <a ng-class="{active: $state.is('main.upload')}" ng-click="$state.go('main.upload')"><span class="fa fa-circle-o"></span>Upload Data</a>
+	</div>
   </header>
 
 <div ui-view class="full-view"></div>
 
-  <footer>
-    <a class="button disabled">Go Back</a>
-    <a href="" class="button primary"><strong>Next Step:</strong> <em>Select Format</em></a>
-  </footer>
+	<footer>
+		<!-- Progress Bar -->
+		<div class="progress-bar">
+			<div class="progress" style="width:30%;"></div>
+		</div>
+
+		<!-- Buttons -->
+		<a class="button disabled">Go Back</a>
+		<a href="" class="button primary"><strong>Next Step:</strong> <em>Select Format</em></a>
+	</footer>
 </div>
