--- a/partials/main.html
+++ b/partials/main.html
@@ -22,7 +22,7 @@
 <div class="full-view">
   <!-- Header -->
   <header>
-  <img src="img/scitranLogo.png" class="logo">
+  <img src="img/logo.png" class="logo">
 	<div class="progress">
 	  <a ng-class="{active: $state.is('main.load')}" ng-click="$state.go('main.load')"><span class="fa fa-check"></span>Load Data</a>
 	  <a ng-class="{active: $state.is('main.format')}" ng-click="$state.go('main.format')"><span class="fa fa-circle-o"></span>Select Format</a>
