--- a/partials/upload.html
+++ b/partials/upload.html
@@ -3,17 +3,25 @@
     <h1>Save &amp; Export Data</h1>
     <div class="card">
       <h2>Upload to Flywheel.io</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
+      <p>Provide the instance URL and your API key to upload the data.</p>
       <div class="form-group">
         <label for="url">Flywheel URL</label>
-        <input type="text" id="url" ng-model="upload.url">
+        <input type="text" id="url" ng-model="upload.url" ng-change="upload.groups=[];upload.destinationGroup=null">
       </div>
       <div class="form-group">
-        <label for="url">Flywheel Login</label>
-        <a href="" class="button primary">Sign in with Google</a>
+        <label for="url">Flywheel API key</label>
+        <input type="password" id="url" ng-model="upload.apiKey" ng-change="upload.groups=[];upload.destinationGroup=null">
+      </div>
+      <div class="form-group" ng-show="!upload.groups.length">
+        <button class="button primary" ng-click="upload.loadGroups()" ng-disabled="!(upload.url && upload.apiKey)">Load groups</button>
+      </div>
+      <div class="form-group" ng-show="upload.groups.length">
+        <select ng-options="group as group.name for group in upload.groups" ng-model="upload.destinationGroup" >
+          <option value="" ng-if="!upload.destinationGroup">- Select Group -</option>
+        </select>
       </div>
       <div class="margin-40"></div>
-      <a href="" class="button secondary" ng-click="upload.upload()">Upload to Flwheel.io</a>
+      <button class="button secondary" ng-click="upload.upload()" ng-disabled="!upload.destinationGroup">Upload to Flwheel.io</button>
     </div>
   </div>
 </section>
