enable style hot reload

--- a/partials/load.html
+++ b/partials/load.html
@@ -3,7 +3,7 @@
     <h1>Let's get organized.</h1>
     <a class="button primary large" ng-click="load.selectFolder()">
       <strong>Click here to select files</strong>
-      <small>Must be DICOM or NiFTi files only</small>
+      <small>Must be DICOM files only</small>
     </a>
     <img src="img/bg.png" class="dots">
   </div>
