--- a/partials/main.html
+++ b/partials/main.html
@@ -33,7 +33,7 @@
     </a>
 	  <!-- <a ng-class="{active: $state.is('main.save')}" ng-click="$state.go('main.save')"><span class="fa fa-circle-o"></span>Save Data</a> -->
 	  <a ng-class="{active: steps.isActive('main.upload')}" ng-click="steps.go('main.upload')" ng-show="steps.isComplete('main.upload') || steps.isActive('main.upload')">
-      <span class="fa" ng-class="{'fa-circle-o': steps.isActive('main.upload'), 'fa-check': !steps.isActive('main.upload')}"></span>Load DataUpload Data
+      <span class="fa" ng-class="{'fa-circle-o': steps.isActive('main.upload'), 'fa-check': !steps.isActive('main.upload')}"></span>Upload Data
     </a>
 	</div>
   </header>
