reinsert save step

--- a/partials/save.html
+++ b/partials/save.html
@@ -2,14 +2,14 @@
   <div class="center">
     <h1>Save &amp; Export Data</h1>
     <div class="card half">
-      <h2>Save to Hard Drive</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
+      <h2>Save to Disk</h2>
+      <p>Select a folder and download your organized dataset.</p>
       <a href="" class="button primary">Save to Hard Drive</a>
     </div>
     <div class="card half">
       <h2>Upload to Flywheel.io</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis tempora dolorem voluptas, quidem temporibus earum totam optio.</p>
-      <a href="" class="button secondary">Upload to Flwheel.io</a>
+      <p>Select the URL where you want to upload your organized dataset.</p>
+      <a href="" class="button secondary" ng-click="steps.next()">Upload to Flwheel.io</a>
     </div>
   </div>
 </section>
