--- a/partials/main.html
+++ b/partials/main.html
@@ -1,37 +1,18 @@
-<!-- <div className="padded-more">
-  <div className="start-button">
-	<button className="btn btn-positive btn-large" ng-click="main.selectFolder()">Show files in folder</button>
-  </div>
-  <br>
-  <div>
-	Data format: <select class="form-control" ng-model="main.viewType" ng-change="main.updateView()">
-	  <option value="series">Scitran</option>
-	  <option value="bids">BIDS</option>
-	  <option value="bids-to-series">BIDS to Scitran</option>
-	</select>
-  </div>
-  <div id="selected-directory">
-  </div>
-  <div id="error">
-  </div>
-  <div id="message">
-  </div>
-  <div ui-view>
-  </div>
-</div> -->
 <div class="full-view">
   <!-- Header -->
   <header>
-  <img src="img/logo.png" class="logo">
-	<div class="progress">
-	  <a ng-class="{active: steps.isActive('main.load')}" ng-click="steps.go('main.load')">
+  <!-- <img src="img/logo.png" class="logo"> -->
+	<div class="progress" >
+	  <a ng-class="{active: steps.isActive('main.load')}" ng-click="steps.go('main.load')" ng-show="steps.isComplete('main.load') || steps.isActive('main.load')">
       <span class="fa" ng-class="{'fa-circle-o': steps.isActive('main.load'), 'fa-check': !steps.isActive('main.load')}"></span>Load Data
     </a>
 	  <!-- <a ng-class="{active: $state.is('main.format')}" ng-click="$state.go('main.format')"><span class="fa fa-circle-o"></span>Select Format</a> -->
 	  <a ng-class="{active: steps.isActive('main.organize')}" ng-show="steps.isComplete('main.organize') || steps.isActive('main.organize')" ng-click="steps.go('main.organize')">
       <span class="fa" ng-class="{'fa-circle-o': steps.isActive('main.organize'), 'fa-check': !steps.isActive('main.organize')}"></span>Organize Data
     </a>
-	  <!-- <a ng-class="{active: $state.is('main.save')}" ng-click="$state.go('main.save')"><span class="fa fa-circle-o"></span>Save Data</a> -->
+    <a ng-class="{active: steps.isActive('main.save')}" ng-click="steps.go('main.save')" ng-show="steps.isComplete('main.save') || steps.isActive('main.save')">
+      <span class="fa" ng-class="{'fa-circle-o': steps.isActive('main.save'), 'fa-check': !steps.isActive('main.save')}"></span>Save Data
+    </a>
 	  <a ng-class="{active: steps.isActive('main.upload')}" ng-click="steps.go('main.upload')" ng-show="steps.isComplete('main.upload') || steps.isActive('main.upload')">
       <span class="fa" ng-class="{'fa-circle-o': steps.isActive('main.upload'), 'fa-check': !steps.isActive('main.upload')}"></span>Upload Data
     </a>
