store dataset to disk
closes #13

--- a/partials/save.html
+++ b/partials/save.html
@@ -4,7 +4,7 @@
     <div class="card half">
       <h2>Save to Disk</h2>
       <p>Select a folder and download your organized dataset.</p>
-      <a href="" class="button primary">Save to Hard Drive</a>
+      <a href="" class="button primary" ng-click="save.save()">Save to Hard Drive</a>
     </div>
     <div class="card half">
       <h2>Upload to Flywheel.io</h2>
