--- a/scss/modules/_section-organize.scss
+++ b/scss/modules/_section-organize.scss
@@ -7,7 +7,8 @@ section.organize {
 	.list {
 		display:inline-block;
 		width:100%;
-		padding:0 300px 140px 0;
+		padding:0 0px 140px 0;
+		//padding:0 300px 140px 0; // (with sidebar)
 		height:100%;
 		position:fixed;
 		top:60px;
