--- a/scss/partials/_forms.scss
+++ b/scss/partials/_forms.scss
@@ -14,7 +14,7 @@
 	}
 
 	// Input
-	input[type="text"], input[type="password"] {
+	input[type="text"], input[type="password"],input[type="number"] {
 		display:block;
 		width:100%;
 		max-width:400px;
@@ -38,4 +38,22 @@
 			font-size:14px;
 		}
 	}
+}
+
+input[type="text"].project-title {
+	display:block;
+	width:100%;
+	max-width:400px;
+	height: 28px;
+	background:#FFF;
+	border: 1px solid $lightblue;
+	border-radius:$radius;
+	padding:0px 10px 0px;
+	font-size:20px;
+	box-shadow:0px 1px 3px rgba(0, 0, 0, .06);
+	&:focus {border-color:$darkblue;}
+}
+
+h3.project-title {
+	height: 28px;
 }
