apply various fixes
- fix filesystem queues
- link loaded size to selection
- fix state in loaded projects
- enable developer tools
- allow page refresh
- fix indeterminate checkbox on sessions

--- a/scss/modules/_section-organize.scss
+++ b/scss/modules/_section-organize.scss
@@ -67,4 +67,34 @@ section.organize {
 		border-left:1px solid $lightblue;
 		padding:20px 20px 140px 20px;
 	}
+
+	input[type="checkbox"].indeterminate {
+		&::before {
+			font-size:8px;
+			font-family: FontAwesome;
+			display: inline-block;
+			color: white;
+			visibility: visible;
+			content: "\f068";
+			text-align: center;
+			overflow: hidden;
+			width:12px;
+			height:12px;
+			background-color: #1a8cff;
+			-webkit-border-radius: 4px;
+		}
+	}
+
+	input[type="checkbox"] {
+		&::before {
+				font-size:8px;
+				line-height: 12px;
+				visibility: visible;
+				display: inline-block;
+				content: "\0000a0";
+				width:12px;
+				height:12px;
+				overflow: hidden;
+		}
+	}
 }
