--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -1,6 +1,6 @@
 // Footer
 footer {
-	display:block;
+	display: block;
 	width:100%;
 	height:60px;
 	position:fixed;
@@ -24,4 +24,25 @@ footer {
 		width:340px;
 		margin:11px 0 0 15px;
 	}
+	.warning {
+		float:left;
+		width: 80%;
+		text-align: left;
+		padding-left: 10px;
+		padding-top: 10px;
+		font-size: 20px;
+		div {
+			height: 30px;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			&.success {
+				color: $darkblue;
+			}
+			&.failure {
+				color: $orange;
+			}
+		}
+	}
+
 }
