set memory usage correctly
closes #51

--- a/partials/organize.html
+++ b/partials/organize.html
@@ -53,7 +53,7 @@
       </div>
     </div>
   </div>
-  <!--div class="sidebar">
+  <!-- <div class="sidebar">
     <h2>Filter &amp; Sort</h2>
     <div class="form-group">
       <label for="search">Search</label>
@@ -83,5 +83,5 @@
       </select>
     </div>
     <a href="" class="button">Reset Filters</a>
-  </div-->
+  </div> -->
 </section>
