--- a/partials/load.html
+++ b/partials/load.html
@@ -1,10 +1,10 @@
 <section class="upload">
   <div class="center">
     <h1>Let's get organized.</h1>
-    <a class="button primary large" ng-click="load.selectFolder()">
+    <button class="button primary large" ng-click="load.selectFolder()" ng-disabled="main.busy.state">
       <strong>Click here to select files</strong>
       <small>Must be DICOM files only</small>
-    </a>
+    </button>
     <img src="img/bg.png" class="dots">
   </div>
 </section>
