correct class naming
closes #36

--- a/partials/load.html
+++ b/partials/load.html
@@ -1,4 +1,4 @@
-<section class="upload">
+<section class="load">
   <div class="center">
     <h1>Let's get organized.</h1>
     <button class="button primary large" ng-click="load.selectFolder()" ng-disabled="main.busy.state">
