--- a/partials/upload.html
+++ b/partials/upload.html
@@ -1,4 +1,4 @@
-<section class="format">
+<section class="upload">
   <div class="center">
     <h1>Save &amp; Export Data</h1>
     <div class="card">
